feat: add screenshot section in landing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 @layer base {
+    html{
+        scroll-behavior: smooth !important;
+    }
+
     :root {
         --chart-1: var(--nextui-primary);
         --chart-2: 173 58% 39%;
